# netring

./: 0.21-doc-sweep-issues.md  0.22-design-input-from-net-diagnostic.md  0.22-flowscope-0.14-wishlist.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  deny.toml  docs  justfile
netring/: CLAUDE.md  Cargo.toml  README.md  SPEC.md
netring-exporters/: Cargo.toml  README.md
netring-exporters/examples/: otlp_anomalies.rs  otlp_metrics.rs  parquet_flows.rs
netring-exporters/src/: kafka.rs  lib.rs  metrics.rs  otlp.rs  parquet.rs
netring-flow/: Cargo.toml  README.md
netring-flow-dns/: Cargo.toml  README.md
netring-flow-dns/examples/: dns_log.rs
netring-flow-dns/src/: correlator.rs  datagram.rs  lib.rs  observer.rs  parser.rs  types.rs
netring-flow-dns/tests/: parser_basic.rs
netring-flow-http/: Cargo.toml  README.md
netring-flow-http/examples/: http_log.rs
netring-flow-http/src/: factory.rs  lib.rs  parser.rs  session.rs  types.rs
netring-flow-http/tests/: parser_basic.rs  pcap_integration.rs
netring-flow-pcap/: Cargo.toml  README.md
netring-flow-pcap/examples/: pcap_summary.rs
netring-flow-pcap/src/: lib.rs  source.rs
netring-flow-pcap/tests/: integration.rs
netring-flow-tls/: Cargo.toml  README.md
netring-flow-tls/examples/: tls_observer.rs
netring-flow-tls/src/: factory.rs  fingerprint.rs  lib.rs  parser.rs  types.rs
netring-flow-tls/tests/: parser_basic.rs
netring-flow/docs/: FLOW_GUIDE.md
netring-flow/examples/: generate_fixtures.rs  pcap_buffered_reassembly.rs  pcap_flow_keys.rs  pcap_flow_summary.rs
netring-flow/fuzz/: .gitignore  Cargo.toml
netring-flow/fuzz/fuzz_targets/: extract_five_tuple.rs  extract_inner_gtpu.rs  extract_inner_vxlan.rs  extract_ip_pair.rs  extract_strip_mpls.rs  extract_strip_vlan.rs
netring-flow/src/: driver.rs  event.rs  extractor.rs  history.rs  lib.rs  reassembler.rs  session.rs  tcp_state.rs  timestamp.rs  tracker.rs  view.rs
netring-flow/src/extract/: encap_gtp.rs  encap_mpls.rs  encap_vlan.rs  encap_vxlan.rs  five_tuple.rs  ip_pair.rs  mac_pair.rs  mod.rs  parse.rs
netring-flow/tests/: pcap_fixtures.rs  proptest_invariants.rs
netring-flow/tests/data/: README.md  dns_queries.pcap  http_session.pcap  mixed_short.pcap
netring/benches/: anomaly.rs  dispatch_specialization.rs  dispatch_throughput.rs  throughput.rs  zero_alloc.rs
netring/docs/: AF_XDP.md  API_OVERVIEW.md  ARCHITECTURE.md  ASYNC_GUIDE.md  BACKENDS.md  CRATE_BOUNDARY.md  EBPF_BANDWIDTH.md  FEATURES.md  FINGERPRINTS.md  INDEX.md  METRICS.md  MIGRATING_0.20_TO_0.21.md  MIGRATING_0.21_TO_0.22.md  MIGRATING_0.22_TO_0.23.md  MIGRATING_0.23_TO_0.24.md  MIGRATING_0.24_TO_0.25.md  MIGRATING_0.26_TO_0.27.md  MIGRATING_0.27_TO_0.28.md  MIRI.md  PERFORMANCE.md  TROUBLESHOOTING.md  TUNING_GUIDE.md  WRITING_DETECTORS.md  discoverability.md  migration-0.19-to-0.20.md  scaling.md
netring/examples/: README.md  async_bridge.rs  async_fanout_workers.rs  async_filter.rs  async_flow_filter.rs  async_flow_idle_per_key.rs  async_flow_keys.rs  async_metrics.rs  async_multi_interface.rs  async_pcap_replay.rs  async_pipeline.rs  async_streamext.rs  async_xdp_busy_poll.rs  async_xdp_custom_program.rs  async_xdp_self_loaded.rs  bpf_filter.rs  bridge.rs  channel_consumer.rs  dpi.rs  ebpf_filter.rs  fanout.rs  inject.rs
netring/examples/anomaly/: anomaly_monitor_demo.rs  dns_query_burst.rs  dns_resolved_no_connection.rs  dns_tunnel_detect.rs  icmp_explained_drop.rs  lateral_movement.rs  pcap_replay.rs  pcap_replay_multi.rs  port_scan.rs  slow_tls_handshake.rs  syn_flood_burst.rs  tls_to_unresolved_ip.rs
netring/examples/async_basics/: capture.rs  inject.rs  lo_dedup.rs  stats_monitor.rs
netring/examples/basic/: batch_processing.rs  capture.rs  dpi.rs  low_latency.rs  pcap_write.rs  tx_replay.rs
netring/examples/filter/: bpf_filter.rs  ebpf_filter.rs
netring/examples/flow/: active_flows_snapshot.rs  channel.rs  conversations.rs  ewma_rate.rs  history.rs  idle_per_key.rs  keys.rs  summary.rs  top_n_flows.rs  with_tap.rs  zeek_export.rs
netring/examples/l7/: dns_lookups.rs  full_monitor.rs  http_session.rs  multi_protocol_monitor.rs  on_tick.rs
netring/examples/monitor/: app_protocols.rs  arp_watch.rs  asset_discovery.rs  asset_inventory.rs  async_handler.rs  auto_backend.rs  basic.rs  beacon_detector.rs  detector_macro.rs  dga_query.rs  ech_adoption.rs  eve_tls.rs  eve_to_filebeat.rs  file_hash_dfir.rs  flow_export.rs  flow_risk.rs  health_endpoint.rs  infra_protocols.rs  ioc_hot_reload.rs  ioc_match.rs  ja4_fingerprint.rs  l2_discovery.rs  label_table.rs  lateral_movement.rs  layered_sinks.rs  load_shedding.rs  metrics_export.rs  ml_features_export.rs  multi_thread_default.rs  ndp_watch.rs  net_diagnostic.rs  nprint_export.rs  ocsf_findings.rs  overload_signal.rs  p0f.rs  pcap_replay.rs  port_scan.rs  quic_sni.rs  report_stream.rs  resilience.rs  (+9 more)
netring/examples/pcap/: sessions.rs
netring/examples/scaling/: async_fanout_workers.rs  fanout.rs
netring/fuzz/: Cargo.toml
netring/src/: bridge.rs  dedup.rs  detector_macro.rs  error.rs  interface.rs  lib.rs  metrics.rs  packet.rs  pcap.rs  pcap_flow.rs  pcap_source.rs  pcap_tap.rs  prelude.rs  stats.rs  syscall.rs  traits.rs
netring/src/ctx/: mod.rs  (+3 more)
netring/tests/: ad_protocols.rs  anomaly_monitor_smoke.rs  anomaly_new_detectors.rs  anomaly_pcap_replay.rs  arp_lo_spoof.rs  arp_replay.rs  asset_inventory.rs  asset_inventory_mdns.rs  asset_inventory_udp.rs  asset_protocols.rs  async_capture.rs  async_handler.rs  async_pcap_source.rs  bpf_builder_proptest.rs  bpf_filter_lifecycle.rs  bpf_humanize.rs  build_error_counter_not_registered.rs  build_validation_handler_protocol.rs  cdp_replay.rs  channel_capture.rs  ctx_threading.rs  dedup_lo.rs  dedup_stress.rs  detector_macro_integration.rs  error_conditions.rs  fanout.rs  flow_packet_flat.rs  flow_risk.rs  flow_state_mut.rs  flow_stream_config.rs  flowscope_03_passthrough.rs  helpers.rs  injector.rs  ioc_match.rs  ioc_reload.rs  layer_chain.rs  layer_spec.rs  live_capture_perf.rs  lldp_replay.rs  ml_features.rs  (+45 more)
(+345 files in other folders)
