[package]
name = "netring"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "High-performance zero-copy packet I/O for Linux (AF_PACKET TPACKET_V3)"
keywords = ["packet", "capture", "af_packet", "tpacket", "zero-copy"]
categories = ["network-programming", "os::linux-apis"]
readme = "README.md"
documentation = "https://docs.rs/netring"
repository = "https://github.com/p13marc/netring"
homepage = "https://github.com/p13marc/netring"
exclude = ["CLAUDE.md", "SPEC.md", "justfile", "plans/"]

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["socket", "mman", "poll", "net", "ioctl"] }
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
bitflags = "2"

tokio = { version = "1", features = ["io-util", "net", "macros", "rt-multi-thread", "time"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }
etherparse = { version = "0.16", optional = true }
# xsk-rs requires libxdp native library. Uncomment when building on a system with libxdp.
# xsk-rs = { version = "0.8", optional = true }

[dev-dependencies]
env_logger = "0.11"
divan = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
etherparse = "0.16"
core_affinity = "0.8"

[features]
default = []
tokio = ["dep:tokio"]
channel = ["dep:crossbeam-channel"]
parse = ["dep:etherparse"]
af-xdp = []  # requires xsk-rs + libxdp native library; see docs/AF_XDP.md
nightly = []
integration-tests = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "throughput"
harness = false
