[workspace]
members = [
    "netring",
    "netring-flow",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p13marc/netring"
authors = ["Marc Pardo <p13marc@gmail.com>"]

# Shared deps. Member crates inherit via `dep.workspace = true`.
[workspace.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["socket", "mman", "poll", "net", "ioctl"] }
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }
bitflags = "2"

tokio = { version = "1", features = ["io-util", "net", "macros", "rt-multi-thread", "time", "signal", "sync"] }
futures-core = { version = "0.3", default-features = false, features = ["std"] }
crossbeam-channel = "0.5"
etherparse = "0.16"
pcap-file = "2"
metrics = "0.24"

# netring-flow tracker deps
ahash = { version = "0.8", default-features = false }
smallvec = "1"
arrayvec = "0.7"
lru = "0.16"
bytes = "1"
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
