[package]
name = "netring-exporters"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Heavyweight anomaly exporters for netring (OTLP, Kafka) — kept out of the core crate"
keywords = ["netring", "otlp", "kafka", "opentelemetry", "exporter"]
categories = ["network-programming"]
readme = "README.md"

# 0.25 W5: companion crate so netring's core stays free of the heavy
# OTLP/Kafka dependency trees. Each exporter implements netring's
# `AnomalySink`, so it drops into `MonitorBuilder::sink(...)` unchanged.

[features]
default = ["otlp"]
# OTLP/HTTP-JSON log export over a blocking HTTP client (ureq + rustls).
otlp = ["dep:ureq", "dep:serde_json"]
# Kafka producer (librdkafka via rdkafka — pulls a C dependency).
kafka = ["dep:rdkafka", "dep:serde_json"]
# Columnar Parquet flow export (issue #51). Heaviest tree (arrow + parquet),
# so opt-in — a `FlowExporter` writing flow records as ZSTD-compressed Parquet.
parquet = ["dep:arrow", "dep:parquet"]

[dependencies]
# `flow` + `tokio` expose the Monitor's anomaly-sink surface the exporters
# implement (netring::anomaly::{sink::AnomalySink, Severity, key::Key}).
netring = { path = "../netring", version = "0.26", default-features = false, features = [
    "flow",
    "tokio",
] }
serde_json = { version = "1", optional = true }
tracing = { workspace = true }
# Blocking HTTP for the OTLP sink — sync, matches AnomalySink::flush.
ureq = { version = "2", optional = true, default-features = false, features = ["tls"] }
# Kafka producer (heavy C dep, opt-in).
rdkafka = { version = "0.36", optional = true }
arrow = { version = "59.0.0", optional = true }
parquet = { version = "59.0.0", optional = true }

[dev-dependencies]
serde_json = "1"
# For the example's `#[tokio::main]` runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
# Parquet round-trip test reads back an in-memory buffer (Bytes: ChunkReader).
bytes = "1"

# Gate the OTLP example so it's skipped when building with only the `kafka`
# feature (it uses OtlpAnomalySink, which lives behind `otlp`).
[[example]]
name = "otlp_anomalies"
required-features = ["otlp"]

[[example]]
name = "otlp_metrics"
required-features = ["otlp"]

[[example]]
name = "parquet_flows"
required-features = ["parquet"]
