[package]
name = "netring-flow-dns"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Passive DNS observer for netring-flow (UDP/53)"
keywords = ["dns", "netring", "flow", "passive", "monitoring"]
categories = ["network-programming", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/netring-flow-dns"

[dependencies]
netring-flow = { version = "0.1", path = "../netring-flow", default-features = false, features = ["extractors", "tracker", "session"] }
simple-dns = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true, default-features = false }

[dev-dependencies]
netring-flow-pcap = { version = "0.1", path = "../netring-flow-pcap" }
netring-flow = { version = "0.1", path = "../netring-flow", features = ["test-helpers"] }
