[package]
name = "netring-flow-http"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Passive HTTP/1.x observer for netring-flow"
keywords = ["http", "netring", "flow", "passive"]
categories = ["network-programming", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/netring-flow-http"

[dependencies]
netring-flow = { version = "0.1", path = "../netring-flow", default-features = false, features = ["tracker", "reassembler", "session"] }
httparse = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
netring-flow-pcap = { version = "0.1", path = "../netring-flow-pcap" }
