[package]
name = "netring-flow-pcap"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "pcap source adapter for netring-flow flow tracking"
keywords = ["pcap", "flow", "netring", "tracking"]
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/netring-flow-pcap"

[dependencies]
netring-flow = { version = "0.1", path = "../netring-flow", default-features = false, features = ["extractors", "tracker"] }
pcap-file = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
netring-flow = { version = "0.1", path = "../netring-flow", features = ["test-helpers"] }
