[package]
name = "netring-flow-tls"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Passive TLS handshake observer for netring-flow"
keywords = ["tls", "ssl", "netring", "flow", "passive"]
categories = ["network-programming", "parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/netring-flow-tls"

[dependencies]
netring-flow = { version = "0.1", path = "../netring-flow", default-features = false, features = ["tracker", "reassembler"] }
tls-parser = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
md-5 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[features]
default = []
# JA3 client fingerprinting (RFC 7707-style hash of ClientHello shape).
ja3 = ["dep:md-5", "dep:hex"]

[dev-dependencies]
netring-flow-pcap = { version = "0.1", path = "../netring-flow-pcap" }
