[package]
name = "netring-flow"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pluggable flow & session tracking for packet capture (cross-platform, runtime-free)"
keywords = ["flow", "session", "tcp", "packet", "tracking"]
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/netring-flow"

[dependencies]
bitflags = { workspace = true }
etherparse = { workspace = true, optional = true }

# tracker feature deps
ahash = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }
lru = { workspace = true, optional = true }

[dev-dependencies]
pcap-file = { workspace = true }

[features]
default = ["extractors", "tracker", "reassembler"]
extractors = ["dep:etherparse"]
tracker = ["dep:ahash", "dep:smallvec", "dep:arrayvec", "dep:lru"]
# `reassembler` requires `tracker` for FlowDriver / FlowSide.
reassembler = ["tracker"]
