[package]
name = "netring-flow"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pluggable flow & session tracking for packet capture (cross-platform, runtime-free)"
keywords = ["flow", "session", "tcp", "packet", "tracking"]
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/netring-flow"

[dependencies]
bitflags = { workspace = true }
etherparse = { workspace = true, optional = true }

# tracker feature deps
ahash = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }
lru = { workspace = true, optional = true }

[dev-dependencies]
pcap-file = { workspace = true }
proptest = { workspace = true }

[[example]]
name = "generate_fixtures"
required-features = ["test-helpers"]

[features]
default = ["extractors", "tracker", "reassembler", "session"]
extractors = ["dep:etherparse"]
tracker = ["dep:ahash", "dep:smallvec", "dep:arrayvec", "dep:lru"]
# `reassembler` requires `tracker` for FlowDriver / FlowSide.
reassembler = ["tracker"]
# `session` exposes the SessionParser + DatagramParser traits
# (typed L7 message parsers; pair with netring::SessionStream).
session = ["tracker"]
# `test-helpers` exposes `extract::parse::test_frames` for proptest,
# fuzz harnesses, and fixture generation. Not for production use.
test-helpers = ["extractors"]
