[package]
name = "netring"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-performance zero-copy packet I/O for Linux (AF_PACKET TPACKET_V3 + AF_XDP)"
keywords = ["packet", "capture", "af_packet", "af_xdp", "zero-copy"]
categories = ["network-programming", "os::linux-apis"]
readme = "README.md"
documentation = "https://docs.rs/netring"
homepage = "https://github.com/p13marc/netring"
exclude = ["CLAUDE.md", "SPEC.md"]

[dependencies]
# Flow & session tracking lives in the flowscope crate.
#
# Non-optional: netring re-exports `flowscope::Timestamp` and
# `flowscope::PacketView` unconditionally as the canonical packet
# timestamp / view types. With `default-features = false`, flowscope
# pulls only `bitflags` + `thiserror` — both already in netring's tree.
# The `parse` feature additionally enables `flowscope/extractors`,
# `flow` enables `tracker`/`reassembler`/`session`.
flowscope = { version = "0.4", default-features = false }

libc = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }

tokio = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
futures-core = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
ahash = { workspace = true, optional = true }
xxhash-rust = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
etherparse = { workspace = true, optional = true }
pcap-file = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# Optional XDP program loader (plan 12). Pure Rust; pulls aya for
# `bpf(2)` / netlink wrappers and XSKMAP map plumbing.
aya = { version = "0.13", optional = true }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
divan = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
etherparse = "0.16"
core_affinity = "0.8"
futures = "0.3"
proptest = "1"

[features]
default = []
tokio = ["dep:tokio", "dep:tokio-stream", "dep:futures-core"]
channel = ["dep:crossbeam-channel"]
parse = ["dep:etherparse", "flowscope/extractors"]
pcap = ["dep:pcap-file"]
metrics = ["dep:metrics"]
af-xdp = []
# Built-in XDP redirect-all program loader for AF_XDP. Pulls `aya`.
# Lets `XdpSocketBuilder::with_default_program()` create an XSKMAP,
# load the program, attach it to the interface, and register the
# socket — no external program loader required.
xdp-loader = ["af-xdp", "dep:aya"]
nightly = []
integration-tests = []
# Flow & session tracking. `flow + tokio` enables `AsyncCapture::flow_stream`.
# Pulls `bytes` since the async reassembler API uses it.
flow = ["parse", "flowscope/tracker", "flowscope/reassembler", "flowscope/session", "dep:bytes", "dep:ahash"]
# L7 parser pass-through features — pull flowscope's HTTP/DNS/TLS modules.
# Used by `examples/l7/*` and any consumer that wants a ready-made parser.
http = ["flow", "flowscope/http"]
dns = ["flow", "flowscope/dns"]
tls = ["flow", "flowscope/tls"]
# Umbrella for everything flowscope-side.
all-parsers = ["http", "dns", "tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ── Examples ────────────────────────────────────────────────────────────────
# Organized by topic under `examples/<category>/`. Example *names*
# (the `cargo run --example <name>` argument) are kept stable across
# the reorg; files moved to subdirectories carry explicit `path = ...`.

# basic/ — plain sync capture / TX / bridge
[[example]]
name = "capture"
path = "examples/basic/capture.rs"

[[example]]
name = "inject"
path = "examples/basic/inject.rs"

[[example]]
name = "bridge"
path = "examples/basic/bridge.rs"

[[example]]
name = "batch_processing"
path = "examples/basic/batch_processing.rs"

[[example]]
name = "low_latency"
path = "examples/basic/low_latency.rs"

[[example]]
name = "stats_monitor"
path = "examples/basic/stats_monitor.rs"

[[example]]
name = "channel_consumer"
path = "examples/basic/channel_consumer.rs"
required-features = ["channel"]

[[example]]
name = "pcap_write"
path = "examples/basic/pcap_write.rs"
required-features = ["pcap"]

[[example]]
name = "dpi"
path = "examples/basic/dpi.rs"

# async_basics/ — async wrappers, no flow features
[[example]]
name = "async_capture"
path = "examples/async_basics/capture.rs"
required-features = ["tokio"]

[[example]]
name = "async_inject"
path = "examples/async_basics/inject.rs"
required-features = ["tokio"]

[[example]]
name = "async_bridge"
path = "examples/async_basics/bridge.rs"
required-features = ["tokio"]

[[example]]
name = "async_stream"
path = "examples/async_basics/stream.rs"
required-features = ["tokio"]

[[example]]
name = "async_streamext"
path = "examples/async_basics/streamext.rs"
required-features = ["tokio"]

[[example]]
name = "async_pipeline"
path = "examples/async_basics/pipeline.rs"
required-features = ["tokio"]

[[example]]
name = "async_signal"
path = "examples/async_basics/signal.rs"
required-features = ["tokio"]

[[example]]
name = "async_lo_dedup"
path = "examples/async_basics/lo_dedup.rs"
required-features = ["tokio"]

[[example]]
name = "async_stats_monitor"
path = "examples/async_basics/stats_monitor.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_metrics"
path = "examples/async_basics/metrics.rs"
required-features = ["tokio", "metrics"]

# filter/ — BPF / eBPF / live filter swap
[[example]]
name = "bpf_filter"
path = "examples/filter/bpf_filter.rs"

[[example]]
name = "ebpf_filter"
path = "examples/filter/ebpf_filter.rs"

[[example]]
name = "async_filter"
path = "examples/filter/async_filter.rs"
required-features = ["tokio", "flow", "parse"]

# scaling/ — fanout + multi-source
[[example]]
name = "fanout"
path = "examples/scaling/fanout.rs"

[[example]]
name = "async_fanout_workers"
path = "examples/scaling/async_fanout_workers.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "async_multi_interface"
path = "examples/scaling/async_multi_interface.rs"
required-features = ["tokio", "flow", "parse"]

# xdp/ — AF_XDP
[[example]]
name = "xdp_send"
path = "examples/xdp/xdp_send.rs"
required-features = ["af-xdp"]

[[example]]
name = "async_xdp"
path = "examples/xdp/async_xdp.rs"
required-features = ["tokio", "af-xdp"]

[[example]]
name = "async_xdp_busy_poll"
path = "examples/xdp/async_xdp_busy_poll.rs"
required-features = ["tokio", "af-xdp"]

[[example]]
name = "async_xdp_self_loaded"
path = "examples/xdp/async_xdp_self_loaded.rs"
required-features = ["tokio", "af-xdp", "xdp-loader"]

[[example]]
name = "async_xdp_custom_program"
path = "examples/xdp/async_xdp_custom_program.rs"
required-features = ["tokio", "af-xdp", "xdp-loader"]

# flow/ — flow tracking (no L7 parsers)
[[example]]
name = "async_flow_keys"
path = "examples/flow/keys.rs"
required-features = ["tokio", "parse"]

[[example]]
name = "async_flow_summary"
path = "examples/flow/summary.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_history"
path = "examples/flow/history.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_channel"
path = "examples/flow/channel.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_filter"
path = "examples/flow/filter.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_idle_per_key"
path = "examples/flow/idle_per_key.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_conversations"
path = "examples/flow/conversations.rs"
required-features = ["tokio", "flow"]

[[example]]
name = "async_flow_with_tap"
path = "examples/flow/with_tap.rs"
required-features = ["tokio", "flow", "parse", "pcap"]

# l7/ — session/datagram parsers (HTTP, DNS, custom)
[[example]]
name = "async_on_tick"
path = "examples/l7/on_tick.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "multi_protocol_monitor"
path = "examples/l7/multi_protocol_monitor.rs"
required-features = ["tokio", "flow", "parse"]

[[example]]
name = "http_session"
path = "examples/l7/http_session.rs"
required-features = ["tokio", "http"]

[[example]]
name = "dns_lookups"
path = "examples/l7/dns_lookups.rs"
required-features = ["tokio", "dns"]

[[example]]
name = "full_monitor"
path = "examples/l7/full_monitor.rs"
required-features = ["tokio", "http", "dns"]

# pcap/ — offline pcap
[[example]]
name = "async_pcap_replay"
path = "examples/pcap/replay.rs"
required-features = ["tokio", "flow", "parse", "pcap"]

[[example]]
name = "async_pcap_sessions"
path = "examples/pcap/sessions.rs"
required-features = ["tokio", "flow", "parse", "pcap"]

[[bench]]
name = "throughput"
harness = false
